Bug 52179 - Libreoffice base copies from wrong row of a read-only table control with Ctrl+C
Summary: Libreoffice base copies from wrong row of a read-only table control with Ctrl+C
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.4.5 release
Hardware: All All
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.1.0 target:3.6.7 target:4.0.3
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-17 06:16 UTC by Yifan Jiang
Modified: 2013-04-15 08:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
file to reproduce the bug (11.67 KB, application/vnd.oasis.opendocument.database)
2012-08-06 19:20 UTC, Dennis Grunert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yifan Jiang 2012-07-17 06:16:45 UTC
This bug was reported in:

  https://bugzilla.novell.com/show_bug.cgi?id=770131

Now transfer to fdo for a better tracking, reproducible steps:

  1. Open the base file and the form inside:

      https://bugzilla.novell.com/attachment.cgi?id=497564

  2. Press "Refresh" button

  3. Do not click or touch keyboards anywhere, but immediately click "Max"

  4. Press "Ctr+C"

  5. Paste content will be "Julian"

In step 3, if random clicking anywhere else in the table before clicking "Max",
the issue seems not reproducible.

So my feeling is the "Refresh" might mistakenly point the table cursor to a
wrong record.
Comment 1 Lionel Elie Mamane 2012-07-18 03:42:57 UTC
Reproduced with LibreOffice 3.4.5 (Debian package) and my development tree.
Comment 2 Dennis Grunert 2012-07-22 09:29:27 UTC
From the OT: "So my feeling is the "Refresh" might mistakenly point the table cursor to a wrong record."

I cannot agree completely. If this would be the only reason, then this bug should also happen with "rightclick - copy" as 4th step, but it doesn't.
Comment 3 Dennis Grunert 2012-08-06 19:20:47 UTC
Created attachment 65201 [details]
file to reproduce the bug

added the file to reproduce the bug
Comment 4 Dennis Grunert 2012-08-06 19:21:30 UTC
This bug is also reproducible in the 3.5.4 release of the openSUSE 12.1 Update repository.
Comment 5 Lionel Elie Mamane 2012-08-07 03:47:24 UTC
(In reply to comment #4)
> This bug is also reproducible in the 3.5.4 release
> of the openSUSE 12.1 Update repository.

The "Version" field is the *oldest* version one has
reproduced with, not the newest. Resetting to 3.4.5.

(But such reproductions with different versions are
useful information; definitely put them in comments.)
Comment 6 Dennis Grunert 2013-04-14 00:32:19 UTC
This 9 months old and by several people reproducible bug is still valid in 3.6.3.
Comment 7 Commit Notification 2013-04-14 07:42:58 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=31d81f87dd8f6aef1eceac4989e77a7cc6a1bc57

fdo#52179 on copy kb-shortcut, from *current* row, not last painted row (!)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-04-15 07:41:17 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8ee665cf3f5a4b7899e99fc426aa958dc296ad19&h=libreoffice-3-6

fdo#52179 on copy kb-shortcut, from *current* row, not last painted row (!)


It will be available in LibreOffice 3.6.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-04-15 07:41:35 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=93301cf7ca8fff91b594d2ebe7bb24510acfdd3c&h=libreoffice-4-0

fdo#52179 on copy kb-shortcut, from *current* row, not last painted row (!)


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.