fdo#52179 on copy kb-shortcut, from *current* row, not last painted row (!)

Change-Id: I39be862abb7c72234adad9c517d4a0570a1d71ae